# effective-ownership

./: README.md  adjust_direct_ownership.py  main.py  main_2_0.py  pyproject.toml
result/: CasaAS_result.json  ResightsApS_result.json
