[project]
name = "resights-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Emil",email = "emiljohansson0211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
